--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,7 +1,8 @@
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '3.5.6'
-	id 'io.spring.dependency-management' version '1.1.7'
+    id 'java'
+    id 'org.springframework.boot' version '3.5.6'
+    id 'io.spring.dependency-management' version '1.1.7'
+    id 'com.github.node-gradle.node' version '7.0.0'
 }
 
 group = 'FinanceApp'
@@ -9,45 +10,55 @@ version = '0.0.1-SNAPSHOT'
 description = 'Demo project for Spring Boot'
 
 java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(25)
-	}
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(25)
+    }
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-// Vue-Projekt liegt unter ../frontend oder frontend
-def frontendDir = "$rootDir/frontend"
-def buildDir = "$frontendDir/dist"
-def staticDir = "$projectDir/src/main/resources/static"
-
-task npmInstall(type: Exec) {
-    workingDir frontendDir
-    commandLine 'npm', 'install'
-}
-
-task npmBuild(type: Exec) {
-    dependsOn npmInstall
-    workingDir frontendDir
-    commandLine 'npm', 'run', 'build'
-}
-
-task copyFrontend(type: Copy) {
-    dependsOn npmBuild
-    from(buildDir)
-    into(staticDir)
-}
-
-processResources.dependsOn copyFrontend
 tasks.named('test') {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
+
+node {
+    version = '18.18.2'
+    npmVersion = '9.5.1'
+    download = true
+    workDir = file("${project.buildDir}/nodejs")
+    npmWorkDir = file("${project.buildDir}/npm")
+    nodeProjectDir = file("${rootDir}/frontend")
+}
+
+// Task: npm install
+tasks.register('npmInstallFrontend', com.github.gradle.node.npm.task.NpmTask) {
+    args = ['install']
+    workingDir = file("${rootDir}/frontend")
+}
+
+
+// Task: npm run build
+tasks.register('npmBuildFrontend', com.github.gradle.node.npm.task.NpmTask) {
+    dependsOn 'npmInstallFrontend'
+    args = ['run', 'build']
+    workingDir = file("${rootDir}/frontend")
+}
+
+// Task: Vue dist nach static kopieren
+tasks.register('copyFrontend', Copy) {
+    dependsOn 'npmBuildFrontend'
+    from("${rootDir}/frontend/dist")
+    into("${projectDir}/src/main/resources/static")
+}
+
+// Spring Boot Build hängt am Frontend-Build
+processResources.dependsOn 'copyFrontend'
