API ANBINDUNG und Verbindung zum Backend

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,6 @@
-spring.application.name=FinanceApp
+# Spring Boot Server Einstellungen
+server.port=8080
 
+# Financial Modeling Prep API Einstellungen
+fmp.api.key=iRmuSr8KXYvl9whZWdXKzsdaSjaAWwqb
+fmp.base.url=https://financialmodelingprep.com/api/v3
